--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Currency Application</string>
     <string name="go_to_details">Go to details</string>
+    <string name="errorMsg">Something went wrong</string>
+    <string name="connectionError">Please check your network connection</string>
 </resources>
